--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="content">
         <aside class="sidebar">
-            <h2>The Mandalorian</h2>
+            <h2 id="inicio">The Mandalorian</h2>
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="thechild.html">The Child</a></li>
@@ -38,7 +38,7 @@
             <p>
                 O criador de Star Wars, George Lucas, começou a desenvolver uma série de televisão em live-action de Star Wars em 2009, mas este projeto foi considerado muito caro para produzir. Ele vendeu a Lucasfilm para a Disney em outubro de 2012. Posteriormente, o trabalho em uma nova série de Star Wars começou para o Disney+. Favreau assinou contrato em março de 2018, atuando como escritor e showrunner. Ele é produtor executivo ao lado de Dave Filoni, Kathleen Kennedy e Colin Wilson. O título da série foi anunciado em outubro de 2018, com as filmagens começando no Manhattan Beach Studios, na Califórnia. A empresa de efeitos visuais Industrial Light & Magic desenvolveu a tecnologia StageCraft para a série, usando cenários virtuais e uma parede de vídeo de 360 graus para criar os ambientes da série. Desde então, isso foi adotado por outras produções de cinema e televisão.
             </p>
-            <h2>Elenco e Personagens</h2>
+            <h2 id="elencopersonagens">Elenco e Personagens</h2>
             <p>
                 Pedro Pascal estrela como Din Djarin, personagem-título da série.[2][7][8] Pascal comparou Djarin, um caçador de recompensas solitário com habilidades avançadas de combate e "caráter moral questionável", a Clint Eastwood. O nome real do personagem não é dado até o "Chapter 8: Redemption", mas Pascal o revelou acidentalmente no início de novembro de 2019. Sua recompensa em "Chapter 1: The Mandalorian" é "A Criança" - coloquialmente conhecido como "Baby Yoda" pelos espectadores - um bebê da mesma espécie que Yoda, criado com animatrônica e fantoches (aumentados com efeitos visuais). Ele se torna o protegido do Mandaloriano, e é revelado que se chama Grogu no "Chapter 13: The Jedi".
             </p>
@@ -50,7 +50,7 @@
             <p>
                 A primeira temporada apresenta várias co-estrelas recorrentes, incluindo Carl Weathers como Greef Karga, líder de uma guilda de caçadores de recompensas;[10][9] Werner Herzog como "O Cliente", um homem enigmático;[10][11] Omid Abtahi como Dr. Pershing, um cientista que trabalha para o cliente;[10][12] Nick Nolte como a voz de Kuiil, um fazendeiro de umidade Ugnaught que ajuda o Mandaloriano;[13][14] Taika Waititi como a voz de IG-11, um droide caçador de recompensas;[15][9] Gina Carano como Cara Dune, uma ex-soldado de choque rebelde que se tornou mercenária;[16][9] Giancarlo Esposito como Moff Gideon, um ex-oficial Imperial; e Emily Swallow como "A Armeira", uma Mandaloriana que forja armaduras e equipamentos de aço beskar.
             </p>
-            <h2>Produção</h2>
+            <h2 id="producao">Produção</h2>
             <p>
                 Em 2019, Jon Favreau revelou ao The Hollywood Reporter que ele apresentou pela primeira vez a ideia do que se tornou O Mandalorian para Kathleen Kennedy durante o verão de 2017, enquanto dirigia o remake fotorrealístico de O Rei Leão para a Walt Disney Pictures.[38] Kennedy colocou Favreau em contato com Filoni, e quando os dois homens se conheceram, Filoni começou a desenhar em guardanapos o que se tornaria a Criança.[39] Depois de cada dia de trabalho na realidade virtual de O Rei Leão ambientada em Playa Vista, Favreau ficava até tarde e trabalhava mais algumas horas desenvolvendo seu projeto secreto de televisão para a Lucasfilm.[39]
             </p>
@@ -61,7 +61,7 @@
             <p>
                 Em 9 de novembro de 2017, o presidente e CEO da Walt Disney Company, Bob Iger, durante uma teleconferência de lucros trimestrais com investidores, anunciou que a Disney e a Lucasfilm estavam desenvolvendo uma nova série de televisão Star Wars de ação ao vivo para o próximo serviço de streaming da Disney, até então sem nome.[40] Em 6 de fevereiro de 2018, foi relatado que Iger revelou durante outra teleconferência de relatório financeiro com investidores que várias séries live-action de Star Wars estavam realmente em desenvolvimento pela Disney, dizendo: "Não estamos desenvolvendo apenas uma, mas alguns Star Wars séries especificamente para o aplicativo direto ao consumidor da Disney. Já mencionamos isso e estamos perto de revelar pelo menos uma das entidades que está desenvolvendo isso para nós. Como o negócio não foi totalmente fechado, não podemos ser específicos sobre isso. Acho que você descobrirá que o nível de talento na frente da televisão também será bastante significativo."[40]
             </p>
-            <h2>Temporadas</h2>
+            <h2 id="temporadas">Temporadas</h2>
             <table class="table">
                 <thead>
                     <tr>
