--- a/thechild.html
+++ b/thechild.html
@@ -19,7 +19,7 @@
 
     <section class="content">
         <aside class="sidebar">
-            <h2>The Mandalorian</h2>
+            <h2 id="inicio">The Mandalorian</h2>
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="thechild.html">The Child</a></li>
@@ -39,7 +39,7 @@
           <p>
             Na série, o protagonista conhecido como "o Mandaloriano", caçador de recompensas, é contratado para rastrear e capturar A criança, para um remanescente do caído Império Galáctico, mas decide protege-lo e tornando-se seu pai adotivo.
           </p>
-          <h2>Recepção</h2>        
+          <h2 id="recepcao">Recepção</h2>        
           <p>
             Grogu foi bem recebido por fãs,[7] se convertendo em um popular meme de Internet.[8][9][10][11] e um querido personagem.[12][13][14] Embora o personagem não seja parente de Yoda, o apelido Bebé Yoda foi adotado, pois não há nome para a espécie; sendo a maneira mais fácil e curta de identificar o personagem.[15] The Guardian considera ser o maior novo personagem de 2019,[16] sendo descrito como parte chave do êxito do serviço Disney+.[17][18] Business Insider considera rápida a ascensão do estrelato ao Meme; como um indicativo do êxito do Disney+.[19]
 
@@ -65,7 +65,6 @@ O personagem foi parodiado no episodio de South Park de dezembro de 2019 Basic C
                 
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#recepcao">Recepção</a></li>
-                <li><a href="#producao">Produção</a></li>
                 
             </ul>
         </aside>
